typescript/checker/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration13_es6.ts.stderr
error: Unexpected token Some(Word(await))
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration13_es6.ts:5:11
  |
5 |    var v: await;
  |           ^^^^^

